--- a/BP/manifest.json
+++ b/BP/manifest.json
@@ -46,6 +46,10 @@
 		{
 			"module_name": "@minecraft/server",
 			"version": "1.7.0-beta"
+		},
+		{
+			"module_name": "@minecraft/server-ui",
+			"version": "1.2.0-beta"
 		}
 	]
 }
