--- a/BP/manifest.json
+++ b/BP/manifest.json
@@ -3,7 +3,15 @@
 	"metadata": {
 		"authors": [
 			"The Place"
-		]
+		],
+		"generated_with": {
+			"bridge": [
+				"2.7.10"
+			],
+			"dash": [
+				"github:bridge-core/dash-compiler#8fa35c73292f6382747d0f411fca26431a6d2c8e"
+			]
+		}
 	},
 	"header": {
 		"name": "Class PVP",
@@ -45,7 +53,7 @@
 	"dependencies": [
 		{
 			"module_name": "@minecraft/server",
-			"version": "1.8.0-beta"
+			"version": "1.9.0-beta"
 		},
 		{
 			"module_name": "@minecraft/server-ui",
